--- a/persistent_queue_project/supervisord.conf
+++ b/persistent_queue_project/supervisord.conf
@@ -26,7 +26,8 @@ directory=/home/random_techy/bootcamp-srinivas/persistent_queue_project/
 autorestart=true
 stdout_logfile=/home/random_techy/bootcamp-srinivas/persistent_queue_project/logs/consumer_%(process_num)s.log
 stderr_logfile=/home/random_techy/bootcamp-srinivas/persistent_queue_project/logs/consumer_%(process_num)s_err.log
-numprocs=2
-process_name=consumer%(process_num)s
+numprocs=4
+process_name=%(program_name)s%(process_num)d
 stopasgroup=true
 stopsignal=TERM
+stopwaitsecs=10  # Wait 10s before SIGKILL
